@@ -7,48 +7,50 @@ use URI;
 use URI::QueryParam;
 
 for my $spec (
-    [ db         => undef,  undef      ],
-    [ unknown    => undef,  undef      ],
-    [ postgresql => 5432,  'pg'        ],
-    [ postgres   => 5432,  'pg'        ],
-    [ pgsql      => 5432,  'pg'        ],
-    [ pg         => 5432,  'pg'        ],
-    [ pgxc       => 5432,  'pg'        ],
-    [ postgresxc => 5432,  'pg'        ],
-    [ redshift   => 5432,  'pg'        ],
-    [ mysql      => 3306,  'mysql'     ],
-    [ mariadb    => 3306,  'mysql'     ],
-    [ maria      => 3306,  'mysql'     ],
-    [ sqlite     => undef, 'sqlite'    ],
-    [ sqlite3    => undef, 'sqlite'    ],
-    [ oracle     => 1521,  'oracle'    ],
-    [ cubrid     => 33000, 'cubrid'    ], # ?
-    [ firebird   => 3050,  'firebird'  ],
-    [ mssql      => 1433,  'mssql'     ],
-    [ sqlserver  => 1433,  'mssql'     ],
-    [ db2        => 50000, 'db2'       ], # ?
-    [ ingres     => 1524,  'ingres'    ],
-    [ sybase     => 2638,  'sybase'    ],
-    [ informix   => 1526,  'informix'  ], # ?
-    [ teradata   => 1025,  'teradata'  ],
-    [ interbase  => 3050,  'interbase' ],
-    [ unify      => 27117, 'unify'     ], # ?
-    [ mongodb    => 27017, 'mongodb'   ],
-    [ mongo      => 27017, 'mongodb'   ],
-    [ monetdb    => 50000, 'monetdb'   ], # ?
-    [ monet      => 50000, 'monetdb'   ], # ?
-    [ maxdb      => 7673,  'maxdb'     ], # ?
-    [ max        => 7673,  'maxdb'     ], # ?
-    [ impala     => 21000, 'impala'    ],
-    [ couchdb    => 5984,  'couchdb'   ],
-    [ couch      => 5984,  'couchdb'   ],
-    [ hive       => 10000, 'hive'      ],
-    [ cassandra  => 9160,  'cassandra' ],
-    [ derby      => 1527,  'derby'     ],
-    [ vertica    => 5433,  'vertica'   ],
-    [ ldapdb     => undef, 'ldapdb'    ],
-    [ exasol     => 8563,  'exasol'    ],
-    [ snowflake  => 443,   'snowflake' ],
+    [ db          => undef, undef       ],
+    [ unknown     => undef, undef       ],
+    [ postgresql  => 5432,  'pg'        ],
+    [ postgres    => 5432,  'pg'        ],
+    [ pgsql       => 5432,  'pg'        ],
+    [ pg          => 5432,  'pg'        ],
+    [ pgxc        => 5432,  'pg'        ],
+    [ postgresxc  => 5432,  'pg'        ],
+    [ redshift    => 5432,  'pg'        ],
+    [ mysql       => 3306,  'mysql'     ],
+    [ mariadb     => 3306,  'mysql'     ],
+    [ maria       => 3306,  'mysql'     ],
+    [ sqlite      => undef, 'sqlite'    ],
+    [ sqlite3     => undef, 'sqlite'    ],
+    [ oracle      => 1521,  'oracle'    ],
+    [ cubrid      => 33000, 'cubrid'    ], # ?
+    [ firebird    => 3050,  'firebird'  ],
+    [ mssql       => 1433,  'mssql'     ],
+    [ sqlserver   => 1433,  'mssql'     ],
+    [ db2         => 50000, 'db2'       ], # ?
+    [ ingres      => 1524,  'ingres'    ],
+    [ sybase      => 2638,  'sybase'    ],
+    [ informix    => 1526,  'informix'  ], # ?
+    [ teradata    => 1025,  'teradata'  ],
+    [ interbase   => 3050,  'interbase' ],
+    [ unify       => 27117, 'unify'     ], # ?
+    [ mongodb     => 27017, 'mongodb'   ],
+    [ mongo       => 27017, 'mongodb'   ],
+    [ monetdb     => 50000, 'monetdb'   ], # ?
+    [ monet       => 50000, 'monetdb'   ], # ?
+    [ maxdb       => 7673,  'maxdb'     ], # ?
+    [ max         => 7673,  'maxdb'     ], # ?
+    [ impala      => 21000, 'impala'    ],
+    [ couchdb     => 5984,  'couchdb'   ],
+    [ couch       => 5984,  'couchdb'   ],
+    [ hive        => 10000, 'hive'      ],
+    [ cassandra   => 9160,  'cassandra' ],
+    [ derby       => 1527,  'derby'     ],
+    [ vertica     => 5433,  'vertica'   ],
+    [ ldapdb      => undef, 'ldapdb'    ],
+    [ exasol      => 8563,  'exasol'    ],
+    [ snowflake   => 443,   'snowflake' ],
+    [ cockroach   => 26257, 'cockroach' ],
+    [ cockroachdb => 26257, 'cockroach' ],
 ) {
     my ($engine, $port, $canon) = @{ $spec };
     my $prefix = "db:$engine";
